tests/ui/only_generic.stderr
error: No supported traits found. At least one trait is required.
 --> tests/ui/only_generic.rs:1:1
  |
1 | #[derive_where::derive_where(T)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `derive_where::derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)
