tests/ui/only_generic.rs
#[derive_where::derive_where(T)]
struct Test<T>(T);

fn main() {}
